about to change set up image background

--- a/index.html
+++ b/index.html
@@ -5,15 +5,24 @@
   <title>Manuel DiCristo</title>
 
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 <body>
   <first-section>
     <text>
-      <span id="first">Hello! My name is</span>
-      <span id="second">MANUEL DI CRISTO</span>
-      <span id="third">I'm a Full Stack Engineer</span>
-      <span id="fourth">For me, possessing diverse programming knowledge is akin to being familiar with world languages. It allows us to create new products, services, and ultimately, new ways of thinking.</span>
-
+      <div id="first">Hello! My name is</div>
+      <div id="second">MANUEL DI CRISTO</div>
+      <div id="third">I'm a Full Stack Engineer</div>
+      <div id="fourth">For me, possessing diverse programming knowledge is akin to being familiar with world languages. It allows us to create new products, services, and ultimately, new ways of thinking.</div>
+      <socials>
+        <a href="https://github.com/dicristomanuel" target="_blank"><div class="fa fa-github"></div></a>
+        <a href="https://www.linkedin.com/in/dicristomanuel" target="_blank"><div class="fa fa-linkedin"></div></a>
+        <a href="https://medium.com/@dicristomanuel" target="_blank"><div class="fa fa-medium"></div></a>
+      </socials>
+      <div id="fifth">
+        <span style="font-weight:bold">CALL ME A UNICORN</span>
+        I love Rails and Express as much as I love HTML and Sass! I can code, design graphics and design user experience.
+      </div>
     </text>
   </first-section>
 
