working on bpop section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <first-section>
+    <me-first></me-first>
     <text>
       <div id="first">Hello! My name is</div>
       <div id="second">MANUEL DI CRISTO</div>
@@ -27,7 +28,36 @@
   </first-section>
 
   <second-section>
+    <bpop-tech>
+      <bpop-square>
+        <p><span>bPOP is a service </span>that connects to your social networks in order to retrieves really cool statistics, like number of posts/likes/comments, top fan and number of active users. <br \><br \> Find out what your friends like about you!</p>
+      </bpop-square>
+      <bpop-square>
+        <p>
+          <span style="font-size:2vw; margin-left:7.5vw;">STACK </span>
+          <icons>
+            <img src="img/rails.png">
+            <img src="img/sidekiq.png">
+            <img src="img/redis.png">
+          </icons>
+          <icons>
+            <img src="img/angular-js.png">
+            <img src="img/html5css3Js.png">
+          </icons>
+          <icons>
+            <img src="img/sass.png">
+            <img src="img/jQuery_And_Ajax.png">
+          </icons>
+        </p>
+      </bpop-square>
+      <bpop-square id="bpop-example1">
+      </bpop-square>
+      <!--
 
+      <bpop-title>TECHNOLOGIES USED</bpop-title>
+      <icons></icons> -->
+    </bpop-tech>
+    <me-second></me-second>
   </second-section>
 
   <third-section>
