changing bpop text

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <second-section>
     <bpop-tech>
       <bpop-square>
-        <p><span>bPOP is a service </span>that connects to your social networks in order to retrieves really cool statistics, like number of posts/likes/comments, top fan and number of active users. <br \><br \> Find out what your friends like about you!</p>
+        <p><span>bPOP</span> is a service that connects to your social networks in order to retrieve the number of posts/likes/comments in a range of time, your top fan (or stalker) and number of active users. <br \><br \> Find out what your friends like about you!</p>
       </bpop-square>
       <bpop-square>
         <p>
