--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="https://medium.com/@dicristomanuel" target="_blank"><div class="fa fa-medium"></div></a>
       </socials>
       <div id="fifth">
-        <span style="font-weight:bold">CALL ME A UNICORN</span>
+        <span style="font-weight:bold">CALL ME AN UNICORN</span>
         I love Rails and Express as much as I love HTML and Sass! I can code, design graphics and design user experience.
       </div>
     </text>
@@ -29,7 +29,7 @@
 
   <second-section>
     <bpop-tech>
-      <bpop-square>
+      <bpop-square id="with-border">
         <p><span>bPOP</span> is a service that connects to your social networks in order to retrieve the number of posts/likes/comments in a range of time, your top fan (or stalker) and number of active users. <br \><br \> Find out what your friends like about you!</p>
       </bpop-square>
       <bpop-square>
