--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="https://medium.com/@dicristomanuel" target="_blank"><div class="fa fa-medium"></div></a>
       </socials>
       <div id="fifth">
-        <span style="font-weight:bold">CALL ME AN UNICORN</span>
+        <span style="font-weight:bold">CALL ME A UNICORN</span>
         I love Rails and Express as much as I love HTML and Sass! I can code, design graphics and design user experience.
       </div>
     </text>
@@ -50,7 +50,7 @@
           </icons>
         </p>
       </bpop-square>
-      <bpop-square id="bpop-example1">
+      <a href=""><bpop-square id="bpop-example1"></a>
       </bpop-square>
       <!--
 
@@ -64,8 +64,9 @@
     <jump></jump>
     <p>OTHER PROJECTS IMPORTANT TO ME</p>
     <projects>
-      <a href="https://github.com/dicristomanuel/dela" target="_blank">
+      <a>
         <dela></dela>
+        <p>coming soon!</p>
       </a>
       <a href="https://github.com/dicristomanuel/guessthatsong" target="_blank">
         <guessthatsong></guessthatsong>
