--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           </icons>
         </p>
       </bpop-square>
-      <a href=""><bpop-square id="bpop-example1"></a>
+      <a href="http://bpop.herokuapp.com/"><bpop-square id="bpop-example1"></a>
       </bpop-square>
       <!--
 
