added icons for other projects section

--- a/index.html
+++ b/index.html
@@ -61,7 +61,12 @@
   </second-section>
 
   <third-section>
-    <jump></jump>
+    <jump>
+      <icons>
+        <a href="https://soundcloud.com/lanottemanuel" target="_blank"><div class="fa fa-soundcloud"></div></a>
+        <a href="http://www.italoamericano.org/story/2013-5-16/Young-Professionals" target="_blank"><div class="fa fa-newspaper-o"></div></a>
+      </icons>
+    </jump>
     <p>OTHER PROJECTS IMPORTANT TO ME</p>
     <projects>
       <a>
