--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Manuel DiCristo</title>
+  <title>Manuel Di Cristo</title>
 
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -52,10 +52,6 @@
       </bpop-square>
       <a href="http://bpop.herokuapp.com/"><bpop-square id="bpop-example1"></a>
       </bpop-square>
-      <!--
-
-      <bpop-title>TECHNOLOGIES USED</bpop-title>
-      <icons></icons> -->
     </bpop-tech>
     <me-second></me-second>
   </second-section>
@@ -80,12 +76,14 @@
         <memorygame></memorygame>
       </a>
     </projects>
+
+    <footer>
+      <div class="fa fa-phone"> +1 (424) 603-7126</div>
+      <div style="font-weight:bold"><a href="#">MANUEL DI CRISTO</a></div>
+      <div class="fa fa-envelope-o"> <a href="mailto:dicristomanuel@icloud.com">dicristomanuel@icloud.com</a></div>
+    </footer>
+
   </third-section>
-
-  <!-- <footer>
-
-  </footer> -->
-
   <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
   <script src="js/main.js"></script>
 </body>
