adapted for safari

--- a/index.html
+++ b/index.html
@@ -8,74 +8,73 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 <body>
-  <first-section>
-    <me-first></me-first>
-    <text>
+  <div class="first-section">
+    <div class="me-first"></div>
+    <div class="text">
       <div id="first">Hello! My name is</div>
       <div id="second">MANUEL DI CRISTO</div>
       <div id="third">I'm a Full Stack Engineer</div>
       <div id="fourth">For me, possessing diverse programming knowledge is akin to being familiar with world languages. It allows us to create new products, services, and ultimately, new ways of thinking.</div>
-      <socials>
+      <div class="socials">
         <a href="https://github.com/dicristomanuel" target="_blank"><div class="fa fa-github"></div></a>
         <a href="https://www.linkedin.com/in/dicristomanuel" target="_blank"><div class="fa fa-linkedin"></div></a>
         <a href="https://medium.com/@dicristomanuel" target="_blank"><div class="fa fa-medium"></div></a>
-      </socials>
+      </div>
       <div id="fifth">
         <span style="font-weight:bold">CALL ME A UNICORN</span>
         I love Rails and Express as much as I love HTML and Sass! I can code, design graphics and design user experience.
       </div>
-    </text>
-  </first-section>
-
-  <second-section>
-    <bpop-tech>
-      <bpop-square id="with-border">
+    </div>
+  </div>
+  <div class="second-section">
+    <div class="bpop-tech">
+      <div class="bpop-square" id="with-border">
         <p><span>bPOP</span> is a service that connects to your social networks in order to retrieve the number of posts/likes/comments in a range of time, your top fan (or stalker) and number of active users. <br \><br \> Find out what your friends like about you!</p>
-      </bpop-square>
-      <bpop-square>
+      </div>
+      <div class="bpop-square">
         <p>
           <span style="font-size:2vw; margin-left:7.5vw;">STACK </span>
-          <icons>
+          <div class="icons">
             <img src="img/rails.png">
             <img src="img/sidekiq.png">
             <img src="img/redis.png">
-          </icons>
-          <icons>
+          </div>
+          <div class="icons">
             <img src="img/angular-js.png">
             <img src="img/html5css3Js.png">
-          </icons>
-          <icons>
+          </div>
+          <div class="icons">
             <img src="img/sass.png">
             <img src="img/jQuery_And_Ajax.png">
-          </icons>
+          </div>
         </p>
-      </bpop-square>
-      <a href="http://bpop.herokuapp.com/"><bpop-square id="bpop-example1"></a>
-      </bpop-square>
-    </bpop-tech>
-    <me-second></me-second>
-  </second-section>
+      </div>
+      <a href="http://bpop.herokuapp.com/"><div class="bpop-square" id="bpop-example1"></a>
+      </div>
+    </div>
+    <div class="me-second"></div>
+  </div>
 
-  <third-section>
-    <jump>
-      <icons>
+  <div class="third-section">
+    <div class="jump">
+      <div class="icons">
         <a href="https://soundcloud.com/lanottemanuel" target="_blank"><div class="fa fa-soundcloud"></div></a>
         <a href="http://www.italoamericano.org/story/2013-5-16/Young-Professionals" target="_blank"><div class="fa fa-newspaper-o"></div></a>
-      </icons>
-    </jump>
+      </div>
+    </div>
     <p>OTHER PROJECTS IMPORTANT TO ME</p>
-    <projects>
+    <div class="projects">
       <a>
-        <dela></dela>
+        <div class="dela"></div>
         <p>coming soon!</p>
       </a>
       <a href="https://github.com/dicristomanuel/guessthatsong" target="_blank">
-        <guessthatsong></guessthatsong>
+        <div class="guessthatsong"></div>
       </a>
       <a href="https://github.com/dicristomanuel/memorygame" target="_blank">
-        <memorygame></memorygame>
+        <div class="memorygame"></div>
       </a>
-    </projects>
+    </div>
 
     <footer>
       <div class="fa fa-phone"> +1 (424) 603-7126</div>
@@ -83,7 +82,7 @@
       <div class="fa fa-envelope-o"> <a href="mailto:dicristomanuel@icloud.com">dicristomanuel@icloud.com</a></div>
     </footer>
 
-  </third-section>
+  </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
   <script src="js/main.js"></script>
 </body>
