--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
           </div>
         </p>
       </div>
-      <a href="http://bpop.herokuapp.com/"><div class="bpop-square" id="bpop-example1"></a>
-      </div>
+      <a href="https://github.com/dicristomanuel/bpop">
+        <div class="bpop-square" id="bpop-example1">
+        </div>
+      </a>
     </div>
     <div class="me-second"></div>
   </div>
