--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           </div>
         </p>
       </div>
-      <a href="https://github.com/dicristomanuel/bpop">
+      <a href="https://github.com/dicristomanuel/bpop" target="_blank">
         <div class="bpop-square" id="bpop-example1">
         </div>
       </a>
