--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
       <div class="bpop-square">
         <p>
-          <span style="font-size:2vw">STACK </span>
+          <span style="font-size:2vw;">STACK </span>
           <div class="icons">
             <img src="img/rails.png">
             <img src="img/sidekiq.png">
