--- a/index-old.html
+++ b/index-old.html
@@ -9,26 +9,25 @@
 </head>
 <body>
   <div class="first-section">
-    <div class="first-pic"></div>
-    <ul class="content">
-      <li id="first">Hello! My name is</li>
-      <li id="second">MANUEL DI CRISTO</li>
-      <li id="third-a">I'm a Full Stack</li>
-      <li id="third-b">Engineer</li>
-      <li id="fourth">For me, possessing diverse programming knowledge is akin to being familiar with world languages. It allows us to create new products, services, and ultimately, new ways of thinking.</li>
-      <li class="socials">
+    <div class="me-first"></div>
+    <div class="text">
+      <div id="first">Hello! My name is</div>
+      <div id="second">MANUEL DI CRISTO</div>
+      <div id="third">I'm a Full Stack Engineer</div>
+      <div id="fourth">For me, possessing diverse programming knowledge is akin to being familiar with world languages. It allows us to create new products, services, and ultimately, new ways of thinking.</div>
+      <div class="socials">
         <a href="https://github.com/dicristomanuel" target="_blank"><div class="fa fa-github"></div></a>
         <a href="https://www.linkedin.com/in/dicristomanuel" target="_blank"><div class="fa fa-linkedin"></div></a>
         <a href="https://medium.com/@dicristomanuel" target="_blank"><div class="fa fa-medium"></div></a>
-      </li>
-      <li id="fifth">
-        <span style="font-weight:bold">MARKETER AT HEART</span>
+      </div>
+      <div id="fifth">
+        <span style="font-weight:bold">CALL ME A UNICORN</span>
         <br \>
-        I believe that before opening that book we all judge it by its cover, whether we are aware of it or not. I only build solutions that offer great performance, safety, reusability as well as excellent UX and UI.
-      </li>
-    </ul>
+        I love Rails and Express as much as I love HTML and Sass! I can code, design graphics and design user experience.
+      </div>
+    </div>
   </div>
-  <!-- <div class="second-section">
+  <div class="second-section">
     <div class="bpop-tech">
       <div class="bpop-square" id="with-border">
         <p><span>bPOP</span> is a service that connects to your social networks in order to retrieve the number of posts/likes/comments in a range of time, your top fan (or stalker) and number of active users. <br \><br \> Find out what your friends like about you!</p>
@@ -86,7 +85,7 @@
       <div class="fa fa-envelope-o"> <a href="mailto:dicristomanuel@icloud.com">dicristomanuel@icloud.com</a></div>
     </footer>
 
-  </div> -->
+  </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
   <script src="js/main.js"></script>
 </body>
