--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Manuel Di Cristo</title>
 
   <link rel="stylesheet" href="css/main.css">
@@ -9,23 +10,24 @@
 </head>
 <body>
   <div class="first-section">
-    <div class="me-first"></div>
-    <div class="text">
-      <div id="first">Hello! My name is</div>
-      <div id="second">MANUEL DI CRISTO</div>
-      <div id="third">I'm a Full Stack Engineer</div>
-      <div id="fourth">For me, possessing diverse programming knowledge is akin to being familiar with world languages. It allows us to create new products, services, and ultimately, new ways of thinking.</div>
-      <div class="socials">
+    <div class="first-pic"></div>
+    <ul class="content">
+      <li id="first">Hello! My name is</li>
+      <li id="second">MANUEL DI CRISTO</li>
+      <li id="third-a">I'm a Full Stack</li>
+      <li id="third-b">Engineer</li>
+      <li id="fourth">For me, possessing diverse programming knowledge is akin to being familiar with world languages. It allows us to create new products, services, and ultimately, new ways of thinking.</li>
+      <li class="socials">
         <a href="https://github.com/dicristomanuel" target="_blank"><div class="fa fa-github"></div></a>
         <a href="https://www.linkedin.com/in/dicristomanuel" target="_blank"><div class="fa fa-linkedin"></div></a>
         <a href="https://medium.com/@dicristomanuel" target="_blank"><div class="fa fa-medium"></div></a>
-      </div>
-      <div id="fifth">
-        <span style="font-weight:bold">CALL ME A UNICORN</span>
+      </li>
+      <li id="fifth">
+        <span style="font-weight:bold">MARKETER AT HEART</span>
         <br \>
-        I love Rails and Express as much as I love HTML and Sass! I can code, design graphics and design user experience.
-      </div>
-    </div>
+        I believe that before opening that book we all judge it by its cover, whether we are aware of it or not. I only build solutions that offer great performance, safety, reusability as well as excellent UX and UI.
+      </li>
+    </ul>
   </div>
   <div class="second-section">
     <div class="bpop-tech">
