--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="first-pic"></div>
     <ul class="content">
       <li id="first">Hello! My name is</li>
-      <li id="second">MANUEL DI CRISTO</li>
+      <!-- <li id="second">MANUEL DI CRISTO</li>
       <li id="third-a">I'm a Full Stack</li>
       <li id="third-b">Engineer</li>
       <li id="fourth">For me, possessing diverse programming knowledge is akin to being familiar with world languages. It allows us to create new products, services, and ultimately, new ways of thinking.</li>
@@ -26,7 +26,7 @@
         <span style="font-weight:bold">MARKETER AT HEART</span>
         <br \>
         I believe that before opening that book we all judge it by its cover, whether we are aware of it or not. I only build solutions that offer great performance, safety, reusability as well as excellent UX and UI.
-      </li>
+      </li> -->
     </ul>
   </div>
   <div class="second-section">
