--- a/index.html
+++ b/index.html
@@ -10,85 +10,87 @@
 </head>
 <body>
   <div class="first-section">
-    <div class="first-pic"></div>
-    <ul class="content">
-      <li id="first">Hello! My name is</li>
-      <li id="second">MANUEL DI CRISTO</li>
-      <li id="third-a">I'm a Full Stack</li>
-      <li id="third-b">Engineer</li>
-      <li id="fourth">For me, possessing diverse programming knowledge is akin to being familiar with world languages. It allows us to create new products, services, and ultimately, new ways of thinking.</li>
-      <li class="socials">
+    <div class="first-section-content">
+      <div class="first-pic"></div>
+      <ul class="content">
+        <li id="first">Hello! My name is</li>
+        <!-- <li id="second">MANUEL DI CRISTO</li>
+        <li id="third-a">I'm a Full Stack</li>
+        <li id="third-b">Engineer</li>
+        <li id="fourth">For me, possessing diverse programming knowledge is akin to being familiar with world languages. It allows us to create new products, services, and ultimately, new ways of thinking.</li>
+        <li class="socials">
         <a href="https://github.com/dicristomanuel" target="_blank"><div class="fa fa-github"></div></a>
         <a href="https://www.linkedin.com/in/dicristomanuel" target="_blank"><div class="fa fa-linkedin"></div></a>
         <a href="https://medium.com/@dicristomanuel" target="_blank"><div class="fa fa-medium"></div></a>
       </li>
       <li id="fifth">
-        <span style="font-weight:bold">MARKETER AT HEART</span>
-        <br \>
-        I believe that before opening that book we all judge it by its cover, whether we are aware of it or not. I only build solutions that offer great performance, safety, reusability as well as excellent UX and UI.
-      </li>
+      <span style="font-weight:bold">MARKETER AT HEART</span>
+      <br \>
+      I believe that before opening that book we all judge it by its cover, whether we are aware of it or not. I only build solutions that offer great performance, safety, reusability as well as excellent UX and UI.
+    </li> -->
     </ul>
   </div>
-  <!-- <div class="second-section">
-    <div class="bpop-tech">
-      <div class="bpop-square" id="with-border">
-        <p><span>bPOP</span> is a service that connects to your social networks in order to retrieve the number of posts/likes/comments in a range of time, your top fan (or stalker) and number of active users. <br \><br \> Find out what your friends like about you!</p>
-      </div>
-      <div class="bpop-square">
-        <p>
-          <span style="font-size:2vw;">STACK </span>
-          <div class="icons">
-            <img src="img/rails.png">
-            <img src="img/sidekiq.png">
-            <img src="img/redis.png">
-          </div>
-          <div class="icons">
-            <img src="img/angular-js.png">
-            <img src="img/html5css3Js.png">
-          </div>
-          <div class="icons">
-            <img src="img/sass.png">
-            <img src="img/jQuery_And_Ajax.png">
-          </div>
-        </p>
-      </div>
-      <a href="https://github.com/dicristomanuel/bpop" target="_blank">
-        <div class="bpop-square" id="bpop-example1">
-        </div>
-      </a>
-    </div>
-    <div class="me-second"></div>
-  </div>
+</div>
+<!-- <div class="second-section">
+<div class="bpop-tech">
+<div class="bpop-square" id="with-border">
+<p><span>bPOP</span> is a service that connects to your social networks in order to retrieve the number of posts/likes/comments in a range of time, your top fan (or stalker) and number of active users. <br \><br \> Find out what your friends like about you!</p>
+</div>
+<div class="bpop-square">
+<p>
+<span style="font-size:2vw;">STACK </span>
+<div class="icons">
+<img src="img/rails.png">
+<img src="img/sidekiq.png">
+<img src="img/redis.png">
+</div>
+<div class="icons">
+<img src="img/angular-js.png">
+<img src="img/html5css3Js.png">
+</div>
+<div class="icons">
+<img src="img/sass.png">
+<img src="img/jQuery_And_Ajax.png">
+</div>
+</p>
+</div>
+<a href="https://github.com/dicristomanuel/bpop" target="_blank">
+<div class="bpop-square" id="bpop-example1">
+</div>
+</a>
+</div>
+<div class="me-second"></div>
+</div>
 
-  <div class="third-section">
-    <div class="jump">
-      <div class="icons">
-        <a href="https://soundcloud.com/lanottemanuel" target="_blank"><div class="fa fa-soundcloud"></div></a>
-        <a href="http://www.italoamericano.org/story/2013-5-16/Young-Professionals" target="_blank"><div class="fa fa-newspaper-o"></div></a>
-      </div>
-    </div>
-    <p>OTHER PROJECTS IMPORTANT TO ME</p>
-    <div class="projects">
-      <a>
-        <div class="dela"></div>
-        <p>coming soon!</p>
-      </a>
-      <a href="https://github.com/dicristomanuel/guessthatsong" target="_blank">
-        <div class="guessthatsong"></div>
-      </a>
-      <a href="https://github.com/dicristomanuel/memorygame" target="_blank">
-        <div class="memorygame"></div>
-      </a>
-    </div> -->
+<div class="third-section">
+<div class="jump">
+<div class="icons">
+<a href="https://soundcloud.com/lanottemanuel" target="_blank"><div class="fa fa-soundcloud"></div></a>
+<a href="http://www.italoamericano.org/story/2013-5-16/Young-Professionals" target="_blank"><div class="fa fa-newspaper-o"></div></a>
+</div>
+</div>
+<p>OTHER PROJECTS IMPORTANT TO ME</p>
+<div class="projects">
+<a>
+<div class="dela"></div>
+<p>coming soon!</p>
+</a>
+<a href="https://github.com/dicristomanuel/guessthatsong" target="_blank">
+<div class="guessthatsong"></div>
+</a>
+<a href="https://github.com/dicristomanuel/memorygame" target="_blank">
+<div class="memorygame"></div>
+</a>
+</div> -->
 
-    <footer>
-      <div class="fa fa-phone"> +1 (424) 603-7126</div>
-      <div style="font-weight:bold"><a href="#">MANUEL DI CRISTO</a></div>
-      <div class="fa fa-envelope-o"> <a href="mailto:dicristomanuel@icloud.com">dicristomanuel@icloud.com</a></div>
-    </footer>
+<!-- <footer>
+  <div class="fa fa-phone"> +1 (424) 603-7126</div>
+  <div style="font-weight:bold"><a href="#">MANUEL DI CRISTO</a></div>
+  <div class="fa fa-envelope-o"> <a href="mailto:dicristomanuel@icloud.com">dicristomanuel@icloud.com</a></div>
+</footer> -->
 
-  </div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
-  <script src="js/main.js"></script>
+</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
