--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
 <body>
   <div class="first-section">
     <div class="first-section-content">
-      <div class="first-pic"></div>
+      <!-- <img src="img/pic-first-section.jpg" class="first-pic"> -->
       <ul class="content">
         <li id="first">Hello! My name is</li>
-        <!-- <li id="second">MANUEL DI CRISTO</li>
+        <li id="second">MANUEL DI CRISTO</li>
         <li id="third-a">I'm a Full Stack</li>
-        <li id="third-b">Engineer</li>
+        <li id="third-b">Software Engineer</li>
         <li id="fourth">For me, possessing diverse programming knowledge is akin to being familiar with world languages. It allows us to create new products, services, and ultimately, new ways of thinking.</li>
         <li class="socials">
-        <a href="https://github.com/dicristomanuel" target="_blank"><div class="fa fa-github"></div></a>
-        <a href="https://www.linkedin.com/in/dicristomanuel" target="_blank"><div class="fa fa-linkedin"></div></a>
-        <a href="https://medium.com/@dicristomanuel" target="_blank"><div class="fa fa-medium"></div></a>
-      </li>
-      <li id="fifth">
-      <span style="font-weight:bold">MARKETER AT HEART</span>
-      <br \>
-      I believe that before opening that book we all judge it by its cover, whether we are aware of it or not. I only build solutions that offer great performance, safety, reusability as well as excellent UX and UI.
-    </li> -->
+          <a href="https://github.com/dicristomanuel" target="_blank"><div class="fa fa-github"></div></a>
+          <a href="https://www.linkedin.com/in/dicristomanuel" target="_blank"><div class="fa fa-linkedin"></div></a>
+          <a href="https://medium.com/@dicristomanuel" target="_blank"><div class="fa fa-medium"></div></a>
+        </li>
+        <li id="fifth">
+          <span style="font-weight:bold">MARKETER AT HEART</span>
+          <br \>
+          I believe that before opening that book we all judge it by its cover, whether we are aware of it or not. I only build solutions that offer great performance, safety, reusability as well as excellent UX and UI.
+        </li>
     </ul>
   </div>
 </div>
