--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="first-section">
     <div class="first-section-content">
-      <!-- <img src="img/pic-first-section.jpg" class="first-pic"> -->
+      <img src="img/pic-first-section.jpg" class="first-pic">
       <ul class="content">
         <li id="first">Hello! My name is</li>
         <li id="second">MANUEL DI CRISTO</li>
@@ -31,38 +31,11 @@
     </ul>
   </div>
 </div>
-<!-- <div class="second-section">
-<div class="bpop-tech">
-<div class="bpop-square" id="with-border">
-<p><span>bPOP</span> is a service that connects to your social networks in order to retrieve the number of posts/likes/comments in a range of time, your top fan (or stalker) and number of active users. <br \><br \> Find out what your friends like about you!</p>
-</div>
-<div class="bpop-square">
-<p>
-<span style="font-size:2vw;">STACK </span>
-<div class="icons">
-<img src="img/rails.png">
-<img src="img/sidekiq.png">
-<img src="img/redis.png">
-</div>
-<div class="icons">
-<img src="img/angular-js.png">
-<img src="img/html5css3Js.png">
-</div>
-<div class="icons">
-<img src="img/sass.png">
-<img src="img/jQuery_And_Ajax.png">
-</div>
-</p>
-</div>
-<a href="https://github.com/dicristomanuel/bpop" target="_blank">
-<div class="bpop-square" id="bpop-example1">
-</div>
-</a>
-</div>
-<div class="me-second"></div>
+<div class="second-section">
+  <div class="me-second"></div>
 </div>
 
-<div class="third-section">
+<!-- <div class="third-section">
 <div class="jump">
 <div class="icons">
 <a href="https://soundcloud.com/lanottemanuel" target="_blank"><div class="fa fa-soundcloud"></div></a>
