--- a/index-old.html
+++ b/index-old.html
@@ -55,7 +55,7 @@
         </div>
       </a>
     </div>
-    <div class="me-second"></div>
+    <div class="second-pic"></div>
   </div>
 
   <div class="third-section">
