--- a/index.html
+++ b/index.html
@@ -28,18 +28,37 @@
           <br \>
           I believe that before opening that book we all judge it by its cover, whether we are aware of it or not. I only build solutions that offer great performance, safety, reusability as well as excellent UX and UI.
         </li>
-    </ul>
+      </ul>
+    </div>
   </div>
-</div>
-<div class="second-section">
-  <div class="me-second"></div>
-</div>
+  <div class="second-section">
+    <div class="second-section-content">
+      <ul class="content">
+        <li id="sixth">Hello! My name is</li>
+        <li id="seventh">MANUEL DI CRISTO</li>
+        <li id="eight-a">I'm a Full Stack</li>
+        <li id="eight-b">Software Engineer</li>
+        <li id="ninth">For me, possessing diverse programming knowledge is akin to being familiar with world languages. It allows us to create new products, services, and ultimately, new ways of thinking.</li>
+        <li class="socials">
+          <a href="https://github.com/dicristomanuel" target="_blank"><div class="fa fa-github"></div></a>
+          <a href="https://www.linkedin.com/in/dicristomanuel" target="_blank"><div class="fa fa-linkedin"></div></a>
+          <a href="https://medium.com/@dicristomanuel" target="_blank"><div class="fa fa-medium"></div></a>
+        </li>
+        <li id="tenth">
+          <span style="font-weight:bold">MARKETER AT HEART</span>
+          <br \>
+          I believe that before opening that book we all judge it by its cover, whether we are aware of it or not. I only build solutions that offer great performance, safety, reusability as well as excellent UX and UI.
+        </li>
+      </ul>
+      <div class="second-pic"></div>
+    </div>
+  </div>
 
-<!-- <div class="third-section">
-<div class="jump">
-<div class="icons">
-<a href="https://soundcloud.com/lanottemanuel" target="_blank"><div class="fa fa-soundcloud"></div></a>
-<a href="http://www.italoamericano.org/story/2013-5-16/Young-Professionals" target="_blank"><div class="fa fa-newspaper-o"></div></a>
+  <!-- <div class="third-section">
+  <div class="jump">
+  <div class="icons">
+  <a href="https://soundcloud.com/lanottemanuel" target="_blank"><div class="fa fa-soundcloud"></div></a>
+  <a href="http://www.italoamericano.org/story/2013-5-16/Young-Professionals" target="_blank"><div class="fa fa-newspaper-o"></div></a>
 </div>
 </div>
 <p>OTHER PROJECTS IMPORTANT TO ME</p>
@@ -57,9 +76,9 @@
 </div> -->
 
 <!-- <footer>
-  <div class="fa fa-phone"> +1 (424) 603-7126</div>
-  <div style="font-weight:bold"><a href="#">MANUEL DI CRISTO</a></div>
-  <div class="fa fa-envelope-o"> <a href="mailto:dicristomanuel@icloud.com">dicristomanuel@icloud.com</a></div>
+<div class="fa fa-phone"> +1 (424) 603-7126</div>
+<div style="font-weight:bold"><a href="#">MANUEL DI CRISTO</a></div>
+<div class="fa fa-envelope-o"> <a href="mailto:dicristomanuel@icloud.com">dicristomanuel@icloud.com</a></div>
 </footer> -->
 
 </div>
