--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <li id="fifth">
           <span style="font-weight:bold">MARKETER AT HEART</span>
           <br \>
-          I believe that before opening that book we all judge it by its cover, whether we are aware of it or not. I only build solutions that offer great performance, safety, reusability as well as excellent UX and UI.
+          I believe that before opening that book we all judge it by its cover, whether we are aware of it or not. I only create solutions that are performant, secure, reusable as well as simple and powerful from a UX - UI point of view.
         </li>
       </ul>
     </div>
@@ -34,55 +34,48 @@
   <div class="second-section">
     <div class="second-section-content">
       <ul class="content">
-        <li id="sixth">Hello! My name is</li>
-        <li id="seventh">MANUEL DI CRISTO</li>
-        <li id="eight-a">I'm a Full Stack</li>
-        <li id="eight-b">Software Engineer</li>
-        <li id="ninth">For me, possessing diverse programming knowledge is akin to being familiar with world languages. It allows us to create new products, services, and ultimately, new ways of thinking.</li>
-        <li class="socials">
-          <a href="https://github.com/dicristomanuel" target="_blank"><div class="fa fa-github"></div></a>
-          <a href="https://www.linkedin.com/in/dicristomanuel" target="_blank"><div class="fa fa-linkedin"></div></a>
-          <a href="https://medium.com/@dicristomanuel" target="_blank"><div class="fa fa-medium"></div></a>
-        </li>
-        <li id="tenth">
-          <span style="font-weight:bold">MARKETER AT HEART</span>
-          <br \>
-          I believe that before opening that book we all judge it by its cover, whether we are aware of it or not. I only build solutions that offer great performance, safety, reusability as well as excellent UX and UI.
-        </li>
+        <li id="sixth-a">I BELIEVE IN LEGIBLE</li>
+        <li id="sixth-d">AND REUSABLE CODE</li>
+        <li id="sixth-b">easy to scale, maintain and debug.</li>
+        <li id="sixth-c">As far as the back-end goes, I tend to build applications with clear and defined funnels which allows the use of finite state machines.</li>
+        <li id="sixth-f">Being able to compartmentalize sets of logic and execute them only when needed permits for a wider range of control when debugging or scaling.</li>
+        <div class="separator"></div>
+        <li id="eight">For the same reasons I prefer composability</li>
+        <li id="eight-b">over inheritance</li>
+        <div class="separator"></div>
+        <li id="ninth">When it comes to front-end I build libraries instead of single pages. Separating sections of the page into their own pieces and adding them to a component library, it’s like investing in the future of your application. </li>
+        <li id="tenth">READ MORE</li>
       </ul>
       <div class="second-pic"></div>
     </div>
   </div>
 
-  <!-- <div class="third-section">
-  <div class="jump">
-  <div class="icons">
-  <a href="https://soundcloud.com/lanottemanuel" target="_blank"><div class="fa fa-soundcloud"></div></a>
-  <a href="http://www.italoamericano.org/story/2013-5-16/Young-Professionals" target="_blank"><div class="fa fa-newspaper-o"></div></a>
-</div>
-</div>
-<p>OTHER PROJECTS IMPORTANT TO ME</p>
-<div class="projects">
-<a>
-<div class="dela"></div>
-<p>coming soon!</p>
-</a>
-<a href="https://github.com/dicristomanuel/guessthatsong" target="_blank">
-<div class="guessthatsong"></div>
-</a>
-<a href="https://github.com/dicristomanuel/memorygame" target="_blank">
-<div class="memorygame"></div>
-</a>
-</div> -->
+  <div class="third-section">
+    <div class="jump">
+      <div class="third-pic"></div>
+      <div class="icons">
+        <a href="https://soundcloud.com/lanottemanuel" target="_blank"><div class="fa fa-soundcloud"></div></a>
+        <a href="http://www.italoamericano.org/story/2013-5-16/Young-Professionals" target="_blank"><div class="fa fa-newspaper-o"></div></a>
+      </div>
+    </div>
+    <div class="projects">
+      <p>PROJECTS THAT ARE IMPORTANT TO ME</p>
+      <div class="list">
+        <a href="https://github.com/dicristomanuel/guessthatsong" target="_blank" class="project guessthatsong"></a>
+        <a href="https://github.com/dicristomanuel/guessthatsong" target="_blank" class="project memorygame"></a>
+        <a href="https://github.com/dicristomanuel/guessthatsong" target="_blank" class="project memorygame"></a>
+        <a href="https://github.com/dicristomanuel/guessthatsong" target="_blank" class="project memorygame"></a>
+        <a href="https://github.com/dicristomanuel/guessthatsong" target="_blank" class="project memorygame"></a>
+        <a href="https://github.com/dicristomanuel/guessthatsong" target="_blank" class="project memorygame"></a>
+      </div>
+    </div>
+  </div>
 
-<!-- <footer>
-<div class="fa fa-phone"> +1 (424) 603-7126</div>
-<div style="font-weight:bold"><a href="#">MANUEL DI CRISTO</a></div>
-<div class="fa fa-envelope-o"> <a href="mailto:dicristomanuel@icloud.com">dicristomanuel@icloud.com</a></div>
-</footer> -->
-
-</div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
-<script src="js/main.js"></script>
+  <footer>
+    <div style="font-weight:bold"><a href="#">MANUEL DI CRISTO</a></div>
+    <div class="fa fa-envelope-o"> <a href="mailto:dicristomanuel@icloud.com">dicristomanuel@icloud.com</a></div>
+  </footer>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script> -->
+  <script src="js/main.js"></script>
 </body>
 </html>
