--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="list">
         <a href="https://github.com/dicristomanuel/guessthatsong" target="_blank" class="project guessthatsong"></a>
         <a href="https://github.com/dicristomanuel/guessthatsong" target="_blank" class="project memorygame"></a>
-        <a href="https://github.com/dicristomanuel/guessthatsong" target="_blank" class="project memorygame"></a>
+        <a href="https://github.com/dicristomanuel/guessthatsong" target="_blank" class="project dela"></a>
         <a href="https://github.com/dicristomanuel/guessthatsong" target="_blank" class="project memorygame"></a>
         <a href="https://github.com/dicristomanuel/guessthatsong" target="_blank" class="project memorygame"></a>
         <a href="https://github.com/dicristomanuel/guessthatsong" target="_blank" class="project memorygame"></a>
@@ -72,10 +72,9 @@
   </div>
 
   <footer>
-    <div style="font-weight:bold"><a href="#">MANUEL DI CRISTO</a></div>
-    <div class="fa fa-envelope-o"> <a href="mailto:dicristomanuel@icloud.com">dicristomanuel@icloud.com</a></div>
+    <a href="#">MANUEL DI CRISTO</a>
+    <div class="fa fa-envelope-o"> <a href="mailto:dicristomanuel@icloud.com"> dicristomanuel@icloud.com</a></div>
   </footer>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script> -->
   <script src="js/main.js"></script>
 </body>
 </html>
