--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
     <div class="projects">
       <p>PROJECTS THAT ARE IMPORTANT TO ME</p>
       <div class="list">
+        <a href="https://github.com/dicristomanuel/raise-facebook-messenger-poc" target="_blank" class="project raise-messenger"></a>
+        <a href="https://github.com/dicristomanuel/prism" target="_blank" class="project prism"></a>
+        <a href="https://github.com/dicristomanuel/mybuy" target="_blank" class="project myby"></a>
+        <a href="https://github.com/dicristomanuel/bpop" target="_blank" class="project bpop"></a>
+        <a href="https://vimeo.com/69806367" target="_blank" class="project dela"></a>
         <a href="https://github.com/dicristomanuel/guessthatsong" target="_blank" class="project guessthatsong"></a>
-        <a href="https://github.com/dicristomanuel/guessthatsong" target="_blank" class="project memorygame"></a>
-        <a href="https://github.com/dicristomanuel/guessthatsong" target="_blank" class="project dela"></a>
-        <a href="https://github.com/dicristomanuel/guessthatsong" target="_blank" class="project memorygame"></a>
-        <a href="https://github.com/dicristomanuel/guessthatsong" target="_blank" class="project memorygame"></a>
-        <a href="https://github.com/dicristomanuel/guessthatsong" target="_blank" class="project memorygame"></a>
       </div>
     </div>
   </div>
