[smart-city-finder] add to portfolio

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <a href="https://github.com/dicristomanuel/mybuy" target="_blank" class="project myby"></a>
         <a href="https://github.com/dicristomanuel/bpop" target="_blank" class="project bpop"></a>
         <a href="https://vimeo.com/69806367" target="_blank" class="project dela"></a>
-        <a href="https://github.com/dicristomanuel/guessthatsong" target="_blank" class="project guessthatsong"></a>
+        <a href="https://github.com/dicristomanuel/smart-city-finder" target="_blank" class="project smart-city-finder"></a>
       </div>
     </div>
   </div>
