[link to blog] temp disable

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <li id="eight-b">over inheritance</li>
         <div class="separator"></div>
         <li id="ninth">When it comes to front-end I build libraries instead of single pages. Separating sections of the page into their own pieces and adding them to a component library, it’s like investing in the future of your application. </li>
-        <li id="tenth">READ MORE</li>
+        <!-- <li id="tenth">READ MORE</li> -->
       </ul>
       <div class="second-pic"></div>
     </div>
@@ -94,6 +94,6 @@
     }, 2500);
   }
   </script>
-  
+
 </body>
 </html>
